--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+        <main class="main-section">
+
+            <app-root></app-root>
+        </main>
+
 </body>
 </html>
