--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-314222-5"></script>
+    <script>window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);  
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-314222-5', { 'send_page_view': false });
+    </script>
 </head>
-
 <body>
     <main class="main-section">
 
